log
Sun 19 May 2024 12:49:19 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
fed2a39
Sun 19 May 2024 12:51:32 AM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:11: error: redefinition of ‘list’
   75 |     List* list=createList();
      |           ^~~~
sudoku.c:54:10: note: previous definition of ‘list’ with type ‘List *’
   54 |    List* list = createList();
      |          ^~~~
Compilation failed
91494d2
Sun 19 May 2024 12:51:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b34b0a2
Sun 19 May 2024 12:52:04 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
a59db8b
Sun 19 May 2024 12:55:07 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:17: error: unused variable ‘l’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |                 ^
sudoku.c:49:14: error: unused variable ‘k’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |              ^
sudoku.c:49:11: error: unused variable ‘j’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |           ^
sudoku.c:49:8: error: unused variable ‘i’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
c2d799c
Sun 19 May 2024 12:56:50 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:17: error: unused variable ‘l’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |                 ^
sudoku.c:49:14: error: unused variable ‘k’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
8784edf
Sun 19 May 2024 12:57:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
f5d8054
Sun 19 May 2024 12:59:04 AM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  5|3
total_score: 35/70
6d10b0d
